tdf#156721 Crash if cursor in Basic IDE is in a macro from a document..

.. and that document is closed

regression from
    commit f3e127217d8daa443b8eda52ac4810e375cc7d63
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue May 9 15:21:20 2023 +0200
use comphelper::WeakComponentImplHelper in
DocumentEventNotifier::Impl

Change-Id: I5c8e68cd222ee1d66dc832700c4a39fd74223643
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155889
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>